--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/icon" href="/marketplace.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Marketplace, Sell Goods Online, Wholesaler's market, Bulk Sale of Goods"
+    />
+    <meta
+      property="og:title"
+      content="Byapari's Marketplace - Sale your products Now!"
+    />
+    <meta
+      property="og:description"
+      content="A platform or a Marketplace for B2B (Business to Business) to list your products for sale. Most useful for any wholesaler or manufacturer."
+    />
+    <meta
+      name="description"
+      content="A platform or a Marketplace for B2B (Business to Business) to list your products for sale. Most useful for any wholesaler or manufacturer."
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
